Audit today's own material and fix what it got wrong
Four reviewers on disjoint sets plus the task lens, over four new pages
and eleven new sections. About thirty-five errors.

The two sections that came back clean are the two written after reading
every class directly. Everything written from an expert report needed
correcting — right about mechanisms, wrong about numbers.

Counts, and the failure was scope: "the file carries 87 setDirty call
sites" is the figure for code/src/java, not the file; the threading
counts included declarations and javadoc links. Three of those counts
are now deleted rather than corrected, since the mechanism carried the
meaning and each count was a separate thing to keep true.

True but misleading: the skill breakdown is behind a preference that
defaults to false; PatternFilter picks by the template file's extension,
not the output file's; BatchExporter hardcodes base.xml.ftl only for
xslt templates.

The .pcg example was wrong. Sub-fields use ':' not '=' — the writer
emits STAT:STR|SCORE:18.

The task lens found the damaging one: a new BONUS: category was
presented as complete at one class, when the map is write-only until
Java reads the key. Also that parseToken must call addBonusInfo, and
three missing steps in the channel walkthrough.

Also: design.md said 713 tags where the handbook says 693; its FACTDEF
row described a Java-fields old side that does not exist; and
changing-behaviour.md named a method that does not exist.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Q75HunHbLN1uwG97XeCCBj